src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Assign_To_Group__c</fullName>
        <label>Assign To Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Triage, Sales, and Information Gathering</fullName>
                </value>
                <value>
                    <fullName>Training &amp; Technical Assistance Group</fullName>
                </value>
                <value>
                    <fullName>Operations Group</fullName>
                </value>
                <value>
                    <fullName>Duke/North Carolina Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Call_Type__c</fullName>
        <description>Select the category of call.</description>
        <inlineHelpText>Select the category of call.</inlineHelpText>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Triage, Sales, and Information Gathering Call</fullName>
                </value>
                <value>
                    <fullName>Practice Assessment Call</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                    <label>HSI Preparation Call (all calls prior to on-site training)</label>
                </value>
                <value>
                    <fullName>Technical Assistance</fullName>
                    <label>Technical Assistance Call (all calls after on-site training)</label>
                </value>
                <value>
                    <fullName>Finance and Sustainability Call</fullName>
                </value>
                <value>
                    <fullName>Data and Evaluation Call</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                    <isActive>false</isActive>
                    <label>Onboarding</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Current_Site_Status_at_End_of_Call__c</fullName>
        <description>Site Pending - select this when a site is still evaluating opportunities to become a HS site. Site Planning to Become a Site - select this when a site has decided to move forward with training.</description>
        <inlineHelpText>Site Pending - select this when a site is still evaluating opportunities to become a HS site. Site Planning to Become a Site - select this when a site has decided to move forward with training.</inlineHelpText>
        <label>Current Site Status at End of Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Site Decided Not to Advance</fullName>
                </value>
                <value>
                    <fullName>Site Planning to Become a Site</fullName>
                </value>
                <value>
                    <fullName>Site Established</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Date_Complete__c</fullName>
        <description>The date the next step task was completed.</description>
        <inlineHelpText>The date the next step task was completed.</inlineHelpText>
        <label>Date Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C4G_Date_of_Call__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date of Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C4G_Due_Date__c</fullName>
        <description>The day the next step task is complete.</description>
        <inlineHelpText>The day the next step task is complete.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C4G_Major_Topics_Discussed__c</fullName>
        <description>List the topics discussed during this call.</description>
        <inlineHelpText>List the topics discussed during this call.</inlineHelpText>
        <label>Major Topics Discussed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C4G_Next_Step__c</fullName>
        <description>Next expected steps needed to complete any follow-up from the call.</description>
        <inlineHelpText>Next expected steps needed to complete any follow-up from the call.</inlineHelpText>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C4G_Note__c</fullName>
        <defaultValue>"Search and select the name of every contact on the call in the Name field below regardless of the account name in the Related To field. A record of the call log will roll up to the contact’s record and their affiliated account record."</defaultValue>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C4G_Other__c</fullName>
        <label>Other Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C4G_Person_Responsible__c</fullName>
        <description>The staff responsible for next steps action items.</description>
        <inlineHelpText>The staff responsible for next steps action items.</inlineHelpText>
        <label>Person Responsible</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>"Note: Search and select the name of every contact on the call in the Name field below regardless of the account name in the Related To field. A record of the call log will roll up to the contact’s record and their affiliated account record."</defaultValue>
        <description>Provides instructions for the Related To field.</description>
        <inlineHelpText>Use these instructions as a reference when filling out the Related To field above.</inlineHelpText>
        <label>Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cfg_ActivityType__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Form Follow-Up</fullName>
                </value>
                <value>
                    <fullName>New Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Import ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cfg_Solicitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solicitor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team's Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today's Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>